# setup-os

./: .gitignore  CHANGELOG.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TASKS.md
.github/: PULL_REQUEST_TEMPLATE.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/sidecar/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: agnostic-architecture.md  architecture-principles.md  branching-and-releases.md  brand.md  conversation-planning-guide.md  desktop-release-testing.md  desktop-signing-notarization.md  desktop-ux-philosophy.md  development-release-timeline.md  diagram-output-standard.md  evolution-model.md  installed-app-smoke-evidence-template.md  notification-os.md  open-core-strategy.md  packaged-app-smoke-tests.md  personal-local-setup.md  portfolio-management-os.md  product-brief.md  product-status.md  python-sidecar-packaging.md  roadmap.md  runtime-node-scheduling.md  setup-os-first-20-research.md  sidecar-release-workflow-scaffold.md  system-ai-design-interview-guide.md
examples/: health_conversation.md  portfolio_cash.csv  portfolio_conversation.md  portfolio_market_data.csv  portfolio_snapshot.csv  portfolio_transactions.csv  portfolio_update.md  portfolio_watchlist.csv
research/: README.md  competitive-landscape-and-gaps.md  portfolio-management-os-building-blocks.md
scripts/: check_desktop_release_contract.py  prepare_installed_app_smoke_evidence.py  smoke_local_utility.py  smoke_packaged_artifact.py
setup_os/: audit.py  (+16 more)
(+49 files in other folders)
